--- a/css/styles.scss
+++ b/css/styles.scss
@@ -72,7 +72,7 @@ $second-font: "Roboto", sans-serif;
   &__step {
     position: relative;
     margin: 0 2.5% 0 2.5%;
-    width: 70%;
+    width: 85%;
     height: 60px;
     display: flex;
     flex-direction: row;
@@ -82,8 +82,8 @@ $second-font: "Roboto", sans-serif;
     background: $light-gray;
     border-radius: 10px;
     box-shadow: 0px 5px 15px #d9d9d9;
+    transform: translate(5px);
     img {
-      margin: 0 15px 0 0;
       width: auto;
       height: 25%;
     }
@@ -129,6 +129,7 @@ $second-font: "Roboto", sans-serif;
   align-items: center;
   justify-content: center;
   gap: 25px;
+  background: $light-gray;
   > h2,
   &__wrapper {
     width: 90%;
@@ -226,7 +227,11 @@ $second-font: "Roboto", sans-serif;
     }
     &__step {
       height: 75px;
+      gap: 15px;
       background: $light-color;
+      img {
+        margin: 0 15px 0 0;
+      }
       h5 {
         font-size: 18px;
       }
@@ -238,6 +243,7 @@ $second-font: "Roboto", sans-serif;
     }
   }
   .list {
+    background: none;
     &__wrapper {
       gap: 55px;
     }
